# Yana-AI

./: .cursorrules  .dockerignore  .gitattributes  .gitignore  .gitmodules  .npmignore  .yamtamignore  .yamtamignore.example  AGENTS.md  ARCHITECTURE.md  BENCHMARK.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COME_MY_WAY_README.md  CONTRIBUTING.md  Cargo.toml  DIRECTION.md  GEMINI.md  HISTORY.md  LICENSE  MANIFEST.json  OPENCODE.md  README.ko.md  README.md  README.vi.md  README.zh.md  ROADMAP.md  SECURITY.md  TODO.md  VERSIONING.md  VISION.md  action.yml  chat-qwen.js  cloudbuild.yaml  come_my_way_demo.cpp  install.sh  m-app.jsx  package-lock.json  package.json  pyproject.toml  (+10 more)
.agent/rules/: yamtam.md
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
.claude-plugin/hooks/: hooks.json  yamtam-audit-rewake.sh
.claude/agents/: agent-gardener.md  backend-developer.md  build-error-resolver.md  cicd-engineer.md  config-doctor.md  context-synthesizer.md  creative-writer.md  daily-assistant.md  data-analyst.md  database-expert.md  database-reviewer.md  docker-expert.md  documentation-writer.md  frontend-developer.md  hoc-tap.md  project-manager.md  prompt-firewall.md  qa-engineer.md  session-historian.md  spec-executor.md  spec-planner.md  spec-verifier.md  systems-architect.md  token-guard.md  tool-router.md  ui-ux-designer.md  verify-agent.md
.claude/assistant/: DIRECTION.md  context.md  memory.md  milestones.md  profile.md  repo-backlog.md  tombstones.md  trending_cache.json
.claude/commands/: agent-map.md  arch-adr.md  arch-design-review.md  arch-diagram.md  arch-plan.md  audit.md  budget-mode.md  challenge.md  checkpoint.md  code-simplify.md  cost-forecast.md  csp.md  debug.md  diff-review.md  dockerfile.md  eval.md  fact-check.md  fix.md  freeze.md  generate-coverage.md  git-changelog.md  git-commit.md  git-pr-create.md  git-pr-review.md  git-worktree.md  handoff.md  hook-review.md  idea-loop.md  improve-skill.md  init-claude.md  integration-test.md  k8s-manifest.md  mcp-audit.md  memory.md  monitor.md  multi-run.md  next-task.md  orchestrate.md  output-budget.md  quick-commit.md  (+31 more)
.gemini/: settings.json
.github/: copilot-instructions.md
.idx/: dev.nix
.zed/: settings.json
adapters/: README.md  aider.md  codex.md  continue.md  deepseek.md  gemini-code.md  kimi.md  kiro.md  qwen.md  windsurf.md
demo/: README.md  demo.sh  demo.tape
docs/: AGENT_BEHAVIOR.md  ARCHITECTURE.md  AUDIT_HARDENING.md  CLAUDE_MD_GUIDE.md  CODEXMATE_SECURITY_MODEL.md  CORE_AUDIT_2026-06-08.md  ChatGPT Image 16_08_00 24 thg 5, 2026.png.  DIRECTION.md  HOOK_WIRING.md  LIMITATIONS.md  MAINTENANCE_POLICY.md  OUTPUT_BUDGET_POLICY.md  PHASE1_COMPLETE.md  PLATFORM-READINESS-WAVE0.md  RELEASE-CHECKLIST.md  RESEARCH_FINDINGS_2026.md  RUNBOOK.md  UPGRADE_PROPOSALS_2026.md  VISION-2.4.md  Yana-AI-Danh-gia-Kien-truc-Bao-mat.md  changelog.html  commands-data.json  demo.cast  demo.sh  desktop.html  guide.html  i18n.js  index.html  io.html  lotus-petals.js  lotus-pond.css  marketplace.html  model-routing-strategy.md  music-player.js  music.html  privacy.md  search.html  session-safety-gate.md  shared-theme.js  sitemap.xml  (+11 more)
docs-dist/: agents-data.json  chatgpt-atlas-animation.json  guide.html  i18n.js  index.html  marketplace.html  music-player.js  music.html  robots.txt  search.html  skills.html  water-bg.js
docs/trace-audit/: README.md  pyproject.toml
docs/trace-audit/src/trace_audit/: __init__.py  checks.py  cli.py  parser.py  report.py
docs/trace-audit/src/trace_audit/checks/: ta001-claim-pass.yml  ta002-no-verify.yml  ta003-test-tamper.yml  ta004-silent-error.yml  ta005-scope-creep.yml
docs/trace-audit/tests/: make_fixtures.py  test_checks.py
docs/trace-audit/tests/fixtures/: clean.jsonl  creep.jsonl  dirty.jsonl  multifile-tamper.jsonl  multitask.jsonl  newtest.jsonl  weaken.jsonl
electron/: main.js  package-lock.json  package.json  preload.js
gates/: anti-fake-pass-gate.md  security-scope-gate.md  truth_gate.md  ui-quality-gate.md
github-app/: README.md  package-lock.json  package.json  tsconfig.json  wrangler.toml
guards/: index.yml
ledger/: token-usage.schema.json
npm/: package.json
prompts/: system_prompt.md
releases/: .gitkeep
reports/: markdown-template.md  report.schema.json
router/: model-routing-policy.yml
scanner/: auth-credential-checks.yml  db-tool-risk-checks.yml  env-secret-checks.yml  mcp-permission-checks.yml  report.schema.json  shell-risk-checks.yml
scripts/: build-wasm.sh  npm-install.js  yamtam-rt-wrapper.js  yana-rt-wrapper.js
site/: astro.config.mjs  package-lock.json  package.json
src/: config.rs  cost.rs  main.rs  observability.rs  plugin.rs  route.rs  task.rs
tests/: integration_runtime.rs  test_audit_include_skills.py  test_audit_json_mvp.py  test_context_pack_check.py  test_dgm_adapted.py  test_doctor_dispatch.py  test_harness_schema_examples.py  test_hermes_context_compressor.py  test_hermes_context_compressor_io.py  test_hermes_context_compressor_pairs.py  test_hermes_context_scrubber.py  test_hermes_conversation_loop.py  test_hermes_error_classifier.py  test_hermes_memory_manager.py  test_hermes_retry_support.py  test_hermes_system_prompt.py  test_hermes_tool_guardrails.py  test_hermes_tool_guardrails_io.py  test_openclaw_allowlist_pattern.py  test_openclaw_classify_session_kind.py  test_openclaw_command_carriers.py  test_openclaw_dispatch_wrapper_resolution.py  test_openclaw_gateway_batch2.py  test_openclaw_input_provenance.py  test_openclaw_level_overrides.py  test_openclaw_model_overrides.py  test_openclaw_number_coercion.py  test_openclaw_session_chat_type_shared.py  test_openclaw_session_id.py  test_openclaw_session_id_resolution.py  test_openclaw_session_key_utils.py  test_openclaw_session_label.py  test_openclaw_session_lifecycle_events.py  test_openclaw_shell_wrapper_resolution.py  test_openclaw_string_coerce.py  test_openclaw_transcript_events.py  test_openclaw_user_turn_transcript.py  test_penpot_adapted.py  test_provenance_check.py  test_ruflo_agent.py  (+13 more)
tools/: check-mail.py  vault-import.py
(+8695 files in other folders)
