[package]
name = "yana-rt"
version = "1.3.0"
edition = "2021"
description = "Yana AI Runtime — safety CLI for AI agents: scan, graph, vault, hunt, ci, map, fix, doctor"
license = "Apache-2.0"
repository = "https://github.com/yanacuti1121/yana-ai"
homepage = "https://yanacuti1121.github.io/yana-ai"
documentation = "https://github.com/yanacuti1121/yana-ai#readme"
keywords = ["ai-safety", "claude-code", "security", "agent", "cli"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"
include = ["src/**", "Cargo.toml", "README.md", "LICENSE"]

[[bin]]
name = "yana-rt"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
shell-words = "1"
regex      = "1"
glob       = "0.3"
walkdir    = "2"
anyhow     = "1"
unicode-normalization = "0.1"
liteparse = { version = "2", default-features = false }
ureq      = "3"
serde_yml = "0.0.13"

[dev-dependencies]
tempfile = "3"

