[package]
name = "yana-rt"
version = "1.3.2"
edition = "2021"
description = "Yana AI Runtime — safety CLI for AI agents: scan, graph, vault, hunt, ci, map, fix, doctor"
license = "Apache-2.0"
repository = "https://github.com/yanacuti1121/yana-ai"
homepage = "https://yanacuti1121.github.io/yana-ai"
documentation = "https://github.com/yanacuti1121/yana-ai#readme"
keywords = ["ai-safety", "claude-code", "security", "agent", "cli"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"
include = ["src/**", "Cargo.toml", "README.md", "LICENSE"]

[[bin]]
name = "yana-rt"
path = "src/main.rs"
required-features = ["cli"]

[lib]
name = "yana_rt"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[features]
default = ["cli"]
cli = [
  "clap", "uuid", "chrono", "shell-words", "glob", "walkdir",
  "anyhow", "unicode-normalization", "liteparse", "ureq", "serde_yml",
]
wasm = ["wasm-bindgen", "js-sys"]

[dependencies]
# Always available (WASM-safe)
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
regex      = "1"

# CLI-only — pulled in by the `cli` feature
clap       = { version = "4", features = ["derive"], optional = true }
uuid       = { version = "1", features = ["v4"],     optional = true }
chrono     = { version = "0.4", features = ["serde"], optional = true }
shell-words          = { version = "1",              optional = true }
glob                 = { version = "0.3",            optional = true }
walkdir              = { version = "2",              optional = true }
anyhow               = { version = "1",              optional = true }
unicode-normalization = { version = "0.1",           optional = true }
liteparse  = { version = "2", default-features = false, optional = true }
ureq       = { version = "3",                        optional = true }
serde_yml  = { version = "0.0.13",                   optional = true }

# WASM
wasm-bindgen = { version = "0.2", optional = true }
js-sys       = { version = "0.3", optional = true }

[dev-dependencies]
tempfile = "3"

