[package]
name = "yana-rt"
version = "1.3.3"
edition = "2021"
description = "Yana AI Runtime — safety CLI for AI agents: scan, graph, vault, hunt, ci, map, fix, doctor"
license = "Apache-2.0"
repository = "https://github.com/yanacuti1121/yana-ai"
homepage = "https://yanacuti1121.github.io/yana-ai"
documentation = "https://github.com/yanacuti1121/yana-ai#readme"
keywords = ["ai-safety", "claude-code", "security", "agent", "cli"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"
include = ["src/**", "Cargo.toml", "README.md", "LICENSE"]

[[bin]]
name = "yana-rt"
path = "src/main.rs"
required-features = ["cli"]

[lib]
name = "yana_rt"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[features]
default = ["cli"]
cli = [
  "clap", "uuid", "chrono", "shell-words", "glob", "walkdir",
  "anyhow", "unicode-normalization", "liteparse", "ureq", "serde_yml", "sha2",
  "ratatui", "crossterm",
  "tree-sitter", "tree-sitter-rust", "tree-sitter-typescript",
  "tree-sitter-javascript", "tree-sitter-python", "tree-sitter-go",
]
wasm = ["wasm-bindgen", "js-sys"]

[dependencies]
# Always available (WASM-safe)
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
regex      = "1"

# CLI-only — pulled in by the `cli` feature
clap       = { version = "4", features = ["derive"], optional = true }
uuid       = { version = "1", features = ["v4"],     optional = true }
chrono     = { version = "0.4", features = ["serde"], optional = true }
shell-words          = { version = "1",              optional = true }
glob                 = { version = "0.3",            optional = true }
walkdir              = { version = "2",              optional = true }
anyhow               = { version = "1",              optional = true }
unicode-normalization = { version = "0.1",           optional = true }
liteparse  = { version = "2", default-features = false, optional = true }
ureq       = { version = "3", features = ["json"],   optional = true }
serde_yml  = { version = "0.0.13",                   optional = true }
sha2       = { version = "0.10",                     optional = true }
# TUI for `yana chat` — synchronous poll/read API only, deliberately not
# opting into crossterm's `event-stream` feature (would pull in async/
# futures plumbing this crate has nowhere else).
ratatui    = { version = "0.30",                     optional = true }
crossterm  = { version = "0.29",                     optional = true }
# src/graph/build.rs import extraction — replaces per-language regex
# (2026-07-23, Wave 0 finding #2 follow-up: the regex approach was the
# root cause of the graph's noisy/wrong edges, not just the unanchored
# path-matching bug already fixed in resolve_import()).
tree-sitter            = { version = "0.26.11", optional = true }
tree-sitter-rust       = { version = "0.24.2",  optional = true }
tree-sitter-typescript = { version = "0.23.2",  optional = true }
tree-sitter-javascript = { version = "0.25.0",  optional = true }
tree-sitter-python     = { version = "0.25.0",  optional = true }
tree-sitter-go         = { version = "0.25.0",  optional = true }

# WASM
wasm-bindgen = { version = "0.2", optional = true }
js-sys       = { version = "0.3", optional = true }

[dev-dependencies]
tempfile = "3"

