[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yana-ai"
version = "0.40.0"
description = "Audits your AI coding agent setup before it can damage your repo. Scan first. Guard later."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [{ name = "Vũ Văn Tâm", email = "phamlongh230@gmail.com" }]
keywords = [
  "ai-agent", "claude-code", "security", "audit", "codex",
  "hooks", "safety", "skills", "knowledge-graph"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
  "PyYAML>=6.0",
  "jsonschema>=4.0",
]

[project.optional-dependencies]
pdf = ["weasyprint>=60.0"]
audit = ["pip-audit>=2.0"]

[project.urls]
Homepage    = "https://yanacuti1121.github.io/yana-ai/"
Repository  = "https://github.com/yanacuti1121/yana-ai"
Changelog   = "https://github.com/yanacuti1121/yana-ai/blob/main/CHANGELOG.md"
"Bug Tracker" = "https://github.com/yanacuti1121/yana-ai/issues"

[project.scripts]
yana-ai    = "yana-ai_engine.cli:main"
yana-rt = "yana-ai_engine.rt:main"

[tool.hatch.build.targets.wheel]
packages = ["src/yana-ai_engine"]

[tool.hatch.build.targets.sdist]
include = [
  "src/",
  "scanner/",
  "README.md",
  "CHANGELOG.md",
  "LICENSE",
  "pyproject.toml",
]
